# ai

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy_blog.yaml
blog/: hugo.yaml
blog/public/: 404.html  index.html  index.xml  sitemap.xml
deep-learning/fastai-1-visual-learner/: README.txt  Resnet34-Cat-or-Dog.ipynb
deep-learning/fastai-2-cv-train-and-deploy/: README.md  dog-breed-identification-export_error-rate-0_118.pkl  dog-breed-identifier-ui.py  dog-breed-predictions_score_0_39899.csv  requirements.txt  upload_model_to_huggingface.py
deep-learning/fastai-3-mnist/: MNIST-flavours.ipynb  MNIST-two-numbers.ipynb  MNIST.ipynb
deep-learning/fastai-4-nlp/: text_generation_and_classification.ipynb
deep-learning/fastai-5-linear-model/: linear-model-impl.ipynb
docs/: _config.yml
docs/_posts/: 2024-06-15-welcome-to-jekyll.markdown
llms/flowise/: On-Laptop RAG (Gemma3) + Document Store + Query Expansion Chatflow.json  On-Laptop RAG (Gemma3) + FAISS from Files Chatflow.json  Simple Chain (OpenAI API) Chatflow.json
llms/huggingface/: Sentence Embeddings and Similarity.ipynb
math/calculus-for-ml/: README.md  classification_with_perceptron_sigmoid.ipynb  gradient_descent_numpy_sklearn_from_scratch.ipynb  gradient_descent_one_variable.ipynb  gradient_descent_two_Variables.ipynb  nn_two_layers.ipynb  (+2 more)
math/linear-algebra-for-ml/: README.md  (+5 more)
ml-systems/: image2embedding.ipynb  text2embedding_modernbert.ipynb  tokenization.ipynb  word2vec_semantic_vector_ops.ipynb
problem-solving/: Graph Visualization.ipynb  LeetCode_2492_Minimum_Score_of_a_Path_Between_Two_Cities.py  LeetCode_2492_Testcase_38.html  LeetCode_752_Open_the_Lock.py  Search Algorithms.ipynb
pytorch/: 1. Introduction to PyToch and AI.ipynb  2. Backpropagation.ipynb  4. Tensors.ipynb  5. The Mechanism of Learning.ipynb  6. Simple Neural Network.ipynb  7. Neural Networks for Image Recognition.ipynb
visual-faiss/: README.md
(+28 files in other folders)
