[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "diffuser>=0.0.1",
    "fastai>=2.1.10",
    "fastbook>=0.0.16",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "librosa>=0.11.0",
    "protobuf>=6.31.1",
    "ruff>=0.11.9",
    "sentence-transformers>=5.0.0",
    "timm>=1.0.19",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "yt-dlp>=2025.7.21",
]
