[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.6.0",
    "diffuser>=0.0.1",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "fastai>=2.1.10",
    "fastbook>=0.0.16",
    "imageio>=2.37.3",
    "ipywidgets>=8.1.7",
    "jax>=0.6.2",
    "jupyterlab>=4.4.2",
    "jupyterlab-spellchecker>=0.8.4",
    "librosa>=0.11.0",
    "open-clip-torch>=3.2.0",
    "protobuf>=6.31.1",
    "ruff>=0.11.9",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "tensorflow>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "yt-dlp>=2025.7.21",
]
